# carcatcher

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/carcatcher/: __init__.py  app_state.py  config.py  main.py  queries.py  schemas.py  settings_store.py
backend/carcatcher/ai/: client.py  evaluate.py  models.py  nl_search.py  ollama_client.py  prompts.py  recommend.py
backend/carcatcher/db/: engine.py  models.py
backend/carcatcher/normalization/: extractor.py  guide_categorizer.py  guide_loader.py  makes.py  model_categorizer.py  prompts.py  schema.py  vw_id_specs.py
backend/carcatcher/pipeline/: categorize.py  evaluate.py  normalize.py  run.py  score.py  snapshot.py
backend/model_guides/: README.md  TEMPLATE.md
backend/scripts/: ollama_sample.py  seed_demo.py
backend/tests/: conftest.py  fakes.py  test_ai_client.py  test_api_health.py  test_api_listings.py  test_api_refresh.py  test_autoscout24.py  test_baseline.py  test_battery.py  test_battery_search.py  test_db_migrate.py  test_evaluate.py  test_extractor.py  test_favorites.py  test_firecrawl_client.py  test_guide_categorizer.py  test_guide_generator.py  test_kleinanzeigen.py  test_mobilede.py  test_model_categorizer.py  test_model_reassign.py  test_models_api.py  test_multisource.py  test_nl_recommend.py  test_normalize.py  test_ollama_client.py  test_pipeline.py  test_run_pipeline.py  test_saved_searches.py  test_scheduler.py  test_score.py  test_search_match.py  test_search_scoped.py  test_settings_api.py  test_snapshot.py
frontend/: Dockerfile  (+7 more)
(+69 files in other folders)
